# soca

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yaml  release.yaml
config/: settings.py
soca/: injection.py  main.py
soca/application/: capture_camera.py  snapshot_camera.py  stream_camera.py
soca/config/: settings.py
soca/domain/repositories/: rtsp_repository_abc.py
soca/infrastructure/datasources/: rtsp_datasource.py
soca/infrastructure/repositories/: rtsp_repository.py
soca/presentation/routers/v1/: capture_router.py  livestream_router.py  snapshot_router.py
