[tool.poetry]
name = "soca"
version = "0.1.0"
description = ""
authors = ["Muhammad Naufal <me@falkia34.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "0.109.1"
uvicorn = { extras = ["standard"], version = "0.26.0" }
pydantic-settings = "2.1.0"
opencv-python = "^4.8.1.78"
vidgear = "0.3.2"
yt-dlp = "2023.12.30"
orjson = "3.9.10"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
