[tool.poetry]
name = "soca"
version = "0.1.0"
description = ""
authors = ["Muhammad Naufal <me@falkia34.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "0.110.0"
uvicorn = { extras = ["standard"], version = "0.29.0" }
pydantic-settings = "2.2.1"
opencv-python = "^4.8.1.78"
vidgear = "0.3.2"
yt-dlp = "2024.4.9"
orjson = "3.9.15"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
